ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_SMS_Autoresponder_Log_Details__c/CnP_PaaS__CnP_SMS_Autoresponder_Log_Details__c.object-meta.xml
<CustomObject>
    <label>C&amp;P SMS Autoresponder Log Details</label>
    <nameField>
        <displayFormat>SMSLog-{0000}</displayFormat>
        <label>C&amp;P SMS Autoresponder Log Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>C&amp;P SMS Autoresponder Log Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>