ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_SMS_Autoresponder_Log_Details__c/fields/CnP_PaaS__Condition_Body__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Condition_Body__c</fullName>
    <label>Condition Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>