ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_SMS_Autoresponder_Log_Details__c/fields/CnP_PaaS__Contact__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>C&amp;P SMS Autoresponder Log Details</relationshipLabel>
    <relationshipName>CnP_SMS_Autoresponder_Log_Details</relationshipName>
    <type>Lookup</type>
</CustomField>