ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_SMS_Autoresponder_Log_Details__c/fields/CnP_PaaS__Message_ID__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Message_ID__c</fullName>
    <label>Message ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>