ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_SMS_Autoresponder_Log_Details__c/fields/CnP_PaaS__Status__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Status__c</fullName>
    <label>Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>