ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_SMS_Autoresponder_Log_Details__c/fields/CnP_PaaS__To_Number__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__To_Number__c</fullName>
    <label>To Number</label>
    <length>14</length>
    <type>Text</type>
</CustomField>